src/components/hotkeys/hotkeys.component.scss
@import 'colors/index';

.hotkeys-container {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 2000;

  .close-icon {
    font-size: 30px;
    color: $color-blue-grey-300;
    float: right;
    margin-top: 5px;
    line-height: 1em;
    height: 30px;
    cursor: pointer;
  }

  .hotkeys-icon {
    cursor: pointer;
    color: $color-blue-grey-300;
    font-size: 14px;
  }

  .icon:hover {
    color: $color-blue-grey-100;
  }
}

.hotkeys {
  background: $color-blue-grey-850;
  border: 1px solid $color-blue-grey-500;
  padding: 15px;
  box-shadow: $shadow-1;
  color: $color-blue-grey-300;
  font-size: 14px;
  border-radius: 2px;

  .hotkey-row {
    padding: 10px 0;
    border-bottom: 1px solid $color-blue-grey-600;

    &:first-child{
      padding-top: 0px;
    }

    &:last-child {
      border-bottom: none;
      padding-bottom: 0px;
    }

    .combination {
      float: right;
      margin-left: 30px;

      .key {
        background: $color-blue-grey-500;
        color: $color-blue-grey-850;
        padding: 2px 7px;
        border-radius: 2px;
      }
    }
  } 
}

